-random issue that was causing the static image to overlap the thumbnail. -automatically resize  image thumnail when viewport is too small.

--- a/src/main/resources/org/reactome/web/fireworks/legends/BottomContainerPanel.css
+++ b/src/main/resources/org/reactome/web/fireworks/legends/BottomContainerPanel.css
@@ -6,5 +6,7 @@
     left: 50%;
 
     height: auto;
+
+    z-index: 1;
     /*background-color: crimson;*/
 }
