--- a/src/main/resources/org/reactome/web/fireworks/thumbnails/StaticIllustrationThumbnail.css
+++ b/src/main/resources/org/reactome/web/fireworks/thumbnails/StaticIllustrationThumbnail.css
@@ -1,19 +1,22 @@
 
 .mainStaticThumbnails {
-    position: absolute;
-    bottom: 0;
-    width: 130px;
-    height: 75px;
-    border: 1px solid grey;
+    width: inherit;
+    height: inherit;
     background-color: white;
+    position:absolute;
+    box-sizing: unset;
 }
 
-.mainStaticThumbnails img, .mainStaticThumbnails svg  {
-    width: 130px;
+.mainStaticThumbnails img, .mainStaticThumbnails svg {
+    width: inherit;
     height: inherit;
     background-color: white;
 }
 
 .mainStaticThumbnails:hover{
     cursor: pointer !important;
+}
+
+.mainStaticThumbnails svg a rect {
+    box-shadow: 10px 10px #0d57ab ;
 }
